// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reflections: (header) should compile template with breadcrumbs and without title 1`] = `
"[helper: breadcrumbs]

[helper: toc]

[partial: members]
"
`;

exports[`Reflections: (template) should compile a callable reflection 1`] = `
"# Interface: CallableReflection

## Callable

[partial: member.signature]

[helper: toc]

[partial: members]
"
`;

exports[`Reflections: (template) should compile an indexable reflection 1`] = `
"# Interface: IndexableReflection

## Indexable

▪ [index: *number*]: *string*

[partial: comment]

[helper: toc]

[partial: members]
"
`;

exports[`Reflections: (template) should compile implemented class 1`] = `
"# Class: ImplementedClass

## Implements

- [*ReflectionClass*](../classes/reflectionclass.md)

[helper: toc]

[partial: members]
"
`;

exports[`Reflections: (template) should compile module with breadcrumbs and project title 1`] = `
"# Enumeration: EnumReflection

[helper: toc]

[partial: members]
"
`;

exports[`Reflections: (template) should compile reflection with type params 1`] = `
"# Interface: ReflectionWithTypeParams<T, V\\\\>

[partial: comment]

## Type parameters

| Name | Description |
| :------ | :------ |
| \`T\` | Some type param |
| \`V\` | Some other type param |

[helper: toc]

[partial: members]
"
`;
